package com.yws.coursemanage.pojo.custom;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;


@Getter
@Setter
public class ClassroomWorks {

    private String classroomId;

    private String workId;
}
